[tool.poetry]
name = "agentdev"
version = "0.1.0"
description = "Local AI agent learning project"
authors = ["michaelraczycki"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "1.2.10"
langchain-core = "1.2.17"
langchain-ollama = "1.0.1"
langchain-chroma = "1.1.0"
langgraph = "1.0.10"
langgraph-prebuilt = "1.0.8"
chromadb = "1.5.2"
ollama = "0.6.1"
pydantic = "2.12.5"
streamlit = "*"
sentence-transformers = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
